# penguin-dash

./: .gitignore  CLAUDE.md  README.md
android/: .gitignore  build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  android_entry.cpp  native_bridge.h  native_main.cpp  sfml_compat.cpp
android/app/src/main/cpp/sfml_compat/SFML/: Audio.hpp  Graphics.hpp  System.hpp  Window.hpp
android/app/src/main/cpp/sfml_compat/SFML/Window/: Context.hpp
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
docs/: android_port_plan.md  codebase_modernization_review.md  gles_render_audit.md  performance_review.md  port_plan.md
src/: Makefile.am  Makefile.in  bh.h  config_screen.cpp  course.cpp  course_render.cpp  env.cpp  env.h  game_config.cpp  game_config.h  glmatrix.cpp  glmatrix.h  glshader.cpp  glshader.h  gui.cpp  hud.cpp  main.cpp  ogl.cpp  ogl.h  ogl_test.cpp  particles.cpp  particles.h  quadtree.cpp  quadtree.h  racing.cpp  spx.h  states.cpp  textures.cpp  textures.h  tool_char.cpp  tool_frame.cpp  tools.cpp  tools.h  track_marks.cpp  tux.cpp  tux.h  winsys.cpp
tools/: make_logo.py
